<resources>
    <string name="app_name">Min-Sum Android Client</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="ip">Enter Host IP</string>
    <string name="join">Join</string>

        <string name="title_activity_minimum_sum">Minimum Sum</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pile">Discard Pile :</string>
    <string name="ticker">Ticker :</string>
    <string name="discard">discard</string>
    <string name="rem">Remove</string>
    <string name="keep">Keep</string>
    <string name="play">Play</string>
    <string name="show">Show</string>
    <string name="cardRemove">cardRemove</string>
    <string name="cardKeep">cardRemove</string>
    <string name="cardImg5">cardImg5</string>
    <string name="cardImg1">cardImg1</string>
    <string name="cardImg4">cardImg4</string>
    <string name="cardImg2">cardImg2</string>
    <string name="cardImg3">cardImg3</string>
    <string name="status">Status :</string>
    <string name="players">No. of Players</string>
    <string name="host">Host</string>
    <string name="copy">Developed by Amit Kothiyal © 2016</string>
    <string name="started">Server Started</string>
</resources>
