<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtIP"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/ip"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:singleLine="true"
        android:id="@+id/txtName"
        android:layout_above="@+id/txtIP"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:id="@+id/btnJoin"
        android:layout_below="@+id/txtIP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtHostIP"
        android:layout_below="@+id/btnJoin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtPlayers"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/players"
        android:singleLine="true"
        android:digits="2345" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/host"
        android:id="@+id/btnHost"
        android:textSize="20sp"
        android:layout_below="@+id/txtPlayers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/hostIP"
        android:layout_alignTop="@+id/txtHostIP"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
